--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@
 numpy==1.18.1
 scipy==1.4.1
 pandas==0.25.3 
-nltk==3.4.5
 matplotlib==3.1.2
 jupyter==1.0.0 
 scikit-learn==0.22.1 
+
+gensim==3.8.1
+bs4==0.0.1 
+nltk==3.4.5
