--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,8 @@ scikit-learn==0.22.1
 gensim==3.8.1
 bs4==0.0.1 
 nltk==3.4.5
-datasketch==1.5.1 
+datasketch==1.5.1
+
+torch===1.4.0  --find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.5.0  --find-links https://download.pytorch.org/whl/torch_stable.html
+pytorch-pretrained-bert==0.6.2 
